# ImgView

./: .clangd  .gitignore  BackgroundWorker.cpp  BackgroundWorker.h  CMakeLists.txt  CMakeUserPresets.json  DirIteratorTask.cpp  DirIteratorTask.h  IconEngine.cpp  IconEngine.h  ImageHashStore.cpp  ImageHashStore.h  ImageInfo.h  ImageItem.cpp  ImageItem.h  ImageLoaderQueue.cpp  ImageLoaderQueue.h  ImageLoaderTask.cpp  ImageLoaderTask.h  ImgView.cpp  ImgView.h  ImgView.sln  ImgView.vcxproj  ImgView.vcxproj.filters  MainWindow.h  README.md  Resource.rc  WorkItem.h  main.cpp
